# charting-student-math-misunderstandings

./: Makefile  README.md  pyproject.toml  requirements.txt  test_gpu_setup.py  test_transformer_setup.py
charting_student_math_misunderstandings/: __init__.py  config.py  dataset.py  features.py  plots.py
charting_student_math_misunderstandings/modeling/: predict.py  predict_transformer.py  train.py  train_transformer.py
docs/: competition-rules.md  mkdocs.yml  transformer-implementation.md
docs/docs/: index.md
