[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "charting_student_math_misunderstandings"
version = "0.0.1"
description = "Kaggle competition where I use NLP to classify misunderstanding type using student problem explanation text"
authors = [
  { name = "Giovani Zanfra Brand\u00e3o" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["charting_student_math_misunderstandings"]
include = ["pyproject.toml", "charting_student_math_misunderstandings/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["charting_student_math_misunderstandings"]
force-sort-within-sections = true

